# datespot

./: .gitignore  .travis.yml  Dockerfile  License  Makefile  build.sbt
.github/workflows/: ci.yml
kotlin/: Makefile  pom.xml
php/: bs_math.cpp  bs_tensorhub.cpp  bs_util.cpp  dev_util_c.cpp  dev_util_c.h  dev_util_p.cpp  dev_util_p.h  math.cu  math.cuh  php_bs_math.h  php_bs_tensorhub.h  php_bs_util.h
python/: CDLAccessors.h  DataSetAccessors.h  LayerAccessors.h  Makefile  NetworkAccessors.h  NetworkFunctions.h  WeightAccessors.h  calculate.h  module.cc  module.h  readme.md  setup.py  utilities.h
python/images/: images.py
python/transformer/: transformermodel.py
src/: Attention.cpp  Attention.h  FeedForwardNetwork.cpp  Makefile.inc  PositionalEncoding.cpp  TransformerEncoderLayer.h
src/engine/: Enum.h  FeedForwardNetwork.cpp  FeedForwardNetworkLayer.cpp  FeedForwardNetworkLayer.h  GpuSort.h  GpuTypes.cpp  GpuTypes.h  Layer.cpp  Layer.h  LayerNorm.cpp  LayerNorm.h  LayerNormalization.cpp  LayerNormalization.h  Makefile  Masking.h  MultiHeadAttentionLayer.cpp  MultiHeadAttentionLayer.h  NcExcptionWrap.h  Network.cpp  Network.h  Neuron.cpp  Neuron.h  PositionalEncoding.cpp  PositionalEncoding.h  TransformerEncoderLayer.cpp  TransformerEncoderLayer.h  TransformerModel.cpp  TransformerModel.h  Types.h  Weight.cpp  Weight.h  bitonic.h  kActivation.cu  kDelta.cu  kLoss.cu  kernels.cu  kernels.h  masking.cpp  transformer.cpp  transformerModel.cpp  (+1 more)
src/knn/: DataReader.cpp  DataReader.h  KnnData.cpp  KnnData.h  KnnExactGpu.cu  KnnExactGpu.h  Makefile  MathUtil.cu  MathUtil.h  Output.cu  Output.h  cudautil.cpp  cudautil.h
src/nlp/: FeedForwardNetwork.cpp  FeedForwardNetwork.h  FeedForwardNetworkLayer.cpp  LayerNormalization.cpp  MultiHeadAttentionLayer.cpp  MultiHeadAttentionLayer.h  NeuralNetwork.cpp  NeuralNetwork.h  PositionalEncoding.h  TransformerEncoderLayer.cpp  TransformerModel.cpp  TransformerModel.h  masking.cpp
src/runtime/: Context.cpp  Context.h  Makefile
src/utils/: CDFGenerator.cpp  CDFhelper.cpp  CDFhelper.h  CWMetric.h  FilterHelper.cpp  Filters.cpp  Filters.h  Generator.cpp  Generator.h  Makefile  Predict.cpp  Train.cpp  Utils.cpp  Utils.h  cdl.cpp  cdl.h  main.cpp
tests/: Makefile  unittests.cpp
tests/engine/: TestDataSet.cpp  TestDataSetDimensions.cpp  TestGpuBuffer.cpp
tests/gpu/: CMakeLists.txt  TestActivationFunctions.cpp  TestCostFunctions.cpp  TestDune.cpp  TestGpu.cpp  TestSort.cpp  TestUtils.h
tests/test_data/: LinearRegressionModel.json  RegressionModel.json  RegressionModel_02.json  RegressionModel_03.json  ScaledMarginalCrossEntropyNetwork.json  ScaledMarginalCrossEntropy_01.json  (+1 more)
tests/unit/: CMakeLists.txt  TestCDFhelper.cpp  TestUtils.cpp  main.cpp
(+51 files in other folders)
